<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/overflowMenu"
        android:title=""
        android:icon="@drawable/ic_menu_24"
        app:showAsAction = "ifRoom">
        <menu>
            <item
                android:id="@+id/mode"
                android:title="@string/menu_title_switch"
                android:icon="@drawable/ic_baseline_sync_24"
                app:showAsAction = "never"
                />
            <item
                android:id="@+id/history"
                android:title="@string/menu_title_history"
                android:icon="@drawable/ic_baseline_history_24"
                app:showAsAction = "never"
                />
            <item
                android:id="@+id/info"
                android:title="@string/menu_title_about"
                android:icon="@drawable/ic_baseline_info_24"
                app:showAsAction = "never"
                />

        </menu>

    </item>
</menu>