<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33333334" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6666666" />

    <TextView
        android:id="@+id/tvMass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/basic_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/li_tv_mass"
        app:layout_constraintEnd_toStartOf="@+id/gl33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/basic_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/li_tv_height"
        app:layout_constraintEnd_toStartOf="@+id/gl66"
        app:layout_constraintStart_toStartOf="@+id/gl33"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/basic_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/li_tv_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl66"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>